# rpi-cam

./: Dockerfile  LICENSE-MIT  README.md  docker-compose.yml  pyproject.toml
.gitea/workflows/: rpi-cam.yaml
.github/workflows/: rpi-cam.yaml
rpi_cam/: main.py
