[tool.poetry]
name = "rpi-cam"
version = "1.0.0"
description = "Example project for generating a docker image intended to run on Raspberry PIs (armhf) with libcamera and picamera2 support."
authors = ["Maximilian Staab <maximilian.staab@mailbox.org>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
